[package]
name = "escape_it"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Converts white-space characters into their escaped versions in provided Strings"
readme = "README.md"
repository = "https://github.com/coruscateor/escape_it"
homepage = "https://coruscateor.com/projects/escape-it"
keywords = ["String", "escaping"]
categories = ["parsing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#corlib = { path="../corlib" }
#gtk_estate = { path="../gtk_estate" } #Do not remove
gtk_estate = "0.1.3"
#act_rs = { path="../act_rs" } #Do not remove
act_rs = "0.1.0"
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "sync", "macros"] }
#escape_it_lib = { path="../escape_it_lib" } #Do not remove
escape_it_lib = "0.1.0"


